# Chart2CSV

./: README.md  pyproject.toml  requirements.txt  setup.py
api/: README.md  main.py
chart2csv/: README.md
chart2csv/core/: detection.py  mistral_ocr.py  ocr.py  pipeline.py  types.py
chart2csv/tests/: test_mistral.py
deploy/: README.md  deploy.sh  nginx.conf
docs/: index.html
scripts/: README.md
wiki/: API-Reference.md  CLI-Reference.md  FAQ.md  Home.md  How-It-Works.md  Installation.md  Quick-Start.md  Troubleshooting.md
